k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: readdit
## kubectl apply -f namespace.yaml
## kubectl get all -n readdit
