k8s/ingress.yaml
# Deploy Ingress + Nginx communicates within cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readdit-ingress
  namespace: readdit
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
